--- a/css/styles.css
+++ b/css/styles.css
@@ -127,8 +127,10 @@ img {
 
 .hero {
     background-color: var(--second-color-text);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), 
+    url('../images/people-office.jpg');
     text-align: center;
-    padding: 188px 0
+    padding: 188px 0;
 }
 
 
@@ -167,11 +169,26 @@ img {
     background-color: var(--second-accent-color-text);
 }
 
-
+/* Section 1 */
 
 .features-list {
     display: flex;
     gap: 24px;
+}
+
+.icon-features-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 264px;
+    height: 112px;
+    margin-bottom: 8px;
+    background: #F4F4FD;
+}
+
+.icon-features {
+    width: 64px;
+    height: 64px;
 }
 
 .features-list > .item {
@@ -190,6 +207,8 @@ img {
     letter-spacing: 0.02em;
     color: var(--main-color-text);
 }
+
+/* Section 2 */
 
 .wawd {
     padding-bottom: 120px;
@@ -213,6 +232,8 @@ img {
     letter-spacing: 0.02em;
     text-transform: capitalize;
 }
+
+/* Section 3 */
 
 .our-team-list {
     display: flex;
@@ -264,11 +285,60 @@ img {
     padding-right: 16px;
 }
 
-/* .our-team-networks {
+.our-team-networks {
+    display: flex;
+    gap: 24px;
+}
+
+.our-team-networks-link {
     display: flex;
     justify-content: center;
-    column-gap: 24px;
-} */
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: var(--accent-color-text);
+    border-radius: 50%;
+}
+
+.icon-our-team {
+    width: 16px;
+    height: 16px;
+}
+
+/* Section 4 */
+
+.customers-title {
+    margin-bottom: 72px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--second-color-text);
+}
+
+.customers-list {
+    display: flex;
+    gap: 24px;
+}
+
+.customers-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: calc((100% - 120px) / 6);
+    height: 88px;
+    border: 1px solid #8E8F99;
+    border-radius: 4px;
+}
+
+.customer-icon {
+    width: 104px;
+    height: 56px;
+}
+
+
 
 /* Portfolio-main */
 
@@ -303,6 +373,7 @@ img {
 .portfolio-filter:hover,
 .portfolio-filter:focus {
     background-color: var(--second-accent-color-text);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     color: #FFFFFF;
     border: 1px solid transparent;
 }
@@ -320,7 +391,11 @@ img {
 
 .examples-item {
     flex-basis: calc((100% - 48px) / 3);
+    
+}
 
+.examples-item:hover, .examples-item:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .card {
@@ -349,13 +424,21 @@ img {
 
 /* =================================== FOOTER =========================================*/
 
+.footer-container {
+    display: flex;
+}
+
+.social-container {
+    margin-left: 120px;
+}
+
 .footer {
     background-color: var(--second-color-text);
     padding-top: 100px;
     padding-bottom: 100px;
 }
 
-.footer a {
+.footer .logo {
     display: inline-block;
     margin-bottom: 16px;
     padding: 0;
@@ -370,4 +453,33 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #F4F4FD;
+}
+
+.social {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+}
+
+.footer-networks {
+    display: flex;
+    gap: 24px;
+}
+
+.footer-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: var(--accent-color-text);
+    border-radius: 50%;
+}
+
+.icon-footer {
+    width: 24px;
+    height: 24px;
 }
