--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@
     --second-accent-color-text: #404BBF;
     --main-color-text: #434455;
     --second-color-text: #2E2F42;
+    --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 body {
@@ -98,11 +100,42 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--second-color-text);
+    transition: color var(--transition);
 }
 
 .menu-nav:hover,
 .menu-nav:focus {
     color: var(--second-accent-color-text);
+}
+
+.studio-line {
+    position: relative;
+}
+
+.studio-line::after {
+    content: '';
+    position: absolute;
+    width: 48px;
+    height: 4px;
+    left: 0px;
+    top: 64px;
+    background: var(--second-accent-color-text);
+    border-radius: 2px;
+}
+
+.portfolio-line {
+    position: relative;
+}
+
+.portfolio-line::after {
+    content: '';
+    position: absolute;
+    width: 66px;
+    height: 4px;
+    left: 0px;
+    top: 64px;
+    background: var(--second-accent-color-text);
+    border-radius: 2px;
 }
 
 .contacts {
@@ -116,6 +149,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: inherit;
+    transition: color var(--transition);
 }
 
 .contact-item:hover,
@@ -162,6 +196,7 @@ img {
     color: #FFFFFF;
     background-color: var(--accent-color-text);
     cursor: pointer;
+    transition: background-color var(--transition);
 }
 
 .button:hover,
@@ -323,11 +358,11 @@ img {
     gap: 24px;
 }
 
-.customers-item {
+.customers-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: calc((100% - 120px) / 6);
+    width: 168px;
     height: 88px;
     border: 1px solid #8E8F99;
     border-radius: 4px;
@@ -368,6 +403,7 @@ img {
     letter-spacing: 0.04em;
     color: var(--accent-color-text);
     cursor: pointer;
+    transition: background-color, box-shadow, color, border var(--transition);
 }
 
 .portfolio-filter:hover,
@@ -391,12 +427,14 @@ img {
 
 .examples-item {
     flex-basis: calc((100% - 48px) / 3);
-    
+    transition: box-shadow var(--transition);
+
 }
 
 .examples-item:hover, .examples-item:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
 
 .card {
     padding: 32px 16px;
@@ -419,6 +457,38 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--main-color-text)
+}
+
+.cover-item {
+    position: relative;
+    overflow: hidden;    
+}
+
+.cover-item:hover .examples-cover-block {
+    transform: translateY(0%);
+}
+
+.examples-cover-block {
+    position: absolute;
+    width: 360px;
+    height: 300px;
+    left: 0px;
+    top: 0px;
+    background: var(--accent-color-text);
+    mix-blend-mode: normal;
+    padding-top: 40px;
+    padding-left: 32px;
+    padding-right: 32px;
+    transform: translateY(100%);
+    transition: transform var(--transition);
+}
+
+.examples-cover-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
 }
 
 
@@ -482,4 +552,61 @@ img {
 .icon-footer {
     width: 24px;
     height: 24px;
+}
+
+/* MODAL */
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: visibility var(--transition), opacity var(--transition);
+}
+
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
+
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform var(--transition);
+    width: 408px;
+    min-height: 584px;
+    background-color: #FCFCFC;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0);
+}
+
+.close-button {
+    position: relative;
+    width: 24px;
+    height: 24px;
+    background-color: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    margin-top: 24px;
+    margin-left: 360px;
+    cursor: pointer;
+}
+
+.closing-modal {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
 }
