--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
     --second-accent-color-text: #404BBF;
     --main-color-text: #434455;
     --second-color-text: #2E2F42;
+    --third-accent-color: #f4f4fd;
     --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
@@ -218,7 +219,7 @@ img {
     width: 264px;
     height: 112px;
     margin-bottom: 8px;
-    background: #F4F4FD;
+    background: var(--third-accent-color);
 }
 
 .icon-features {
@@ -276,7 +277,7 @@ img {
 }
 
 .our-team {
-    background: #F4F4FD;
+    background: var(--third-accent-color);
 }
 
 .our-team-title {
@@ -394,7 +395,7 @@ img {
     padding: 12px 24px;
     border: 1px solid #E7E9FC;
     border-radius: 4px;
-    background: #F4F4FD;
+    background: var(--third-accent-color);
     font-family: 'Roboto', sans-serif;
     text-align: center;
     font-weight: 500;
@@ -403,7 +404,10 @@ img {
     letter-spacing: 0.04em;
     color: var(--accent-color-text);
     cursor: pointer;
-    transition: background-color, box-shadow, color, border var(--transition);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-filter:hover,
@@ -427,11 +431,14 @@ img {
 
 .examples-item {
     flex-basis: calc((100% - 48px) / 3);
-    transition: box-shadow var(--transition);
-
 }
 
-.examples-item:hover, .examples-item:focus {
+.examples-item > a {
+    display: block;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.examples-item > a:hover, .examples-item > a:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
@@ -464,31 +471,28 @@ img {
     overflow: hidden;    
 }
 
-.cover-item:hover .examples-cover-block {
+.cover-item:hover .examples-cover-text {
     transform: translateY(0%);
 }
 
-.examples-cover-block {
-    position: absolute;
-    width: 360px;
-    height: 300px;
-    left: 0px;
-    top: 0px;
-    background: var(--accent-color-text);
-    mix-blend-mode: normal;
-    padding-top: 40px;
-    padding-left: 32px;
-    padding-right: 32px;
-    transform: translateY(100%);
-    transition: transform var(--transition);
-}
-
 .examples-cover-text {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    padding: 40px 32px;
+    background-color: var(--accent-color-text);
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.02em;
-    color: #F4F4FD;
+    color: var(--third-accent-color);
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.examples-cover-text:hover, .examples-cover-text:focus {
+    transform: translateY(0%);
 }
 
 
@@ -496,10 +500,11 @@ img {
 
 .footer-container {
     display: flex;
+    align-items: baseline
 }
 
-.social-container {
-    margin-left: 120px;
+.logo-container {
+    margin-right: 120px;
 }
 
 .footer {
@@ -515,14 +520,14 @@ img {
 }
 
 .logo-part-footer {
-    color: #F4F4FD;
+    color: var(--third-accent-color);
 }
 
 .footer-descr {
     max-width: 264px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #F4F4FD;
+    color: var(--third-accent-color);
 }
 
 .social {
@@ -536,7 +541,7 @@ img {
 
 .footer-networks {
     display: flex;
-    gap: 24px;
+    gap: 16px;
 }
 
 .footer-link {
@@ -549,9 +554,12 @@ img {
     border-radius: 50%;
 }
 
+.footer-link:hover, .footer-link:focus {
+    background-color: #31d0aa;
+}
+
 .icon-footer {
-    width: 24px;
-    height: 24px;
+    fill: var(--third-accent-color);
 }
 
 /* MODAL */
