--- a/css/styles.css
+++ b/css/styles.css
@@ -552,6 +552,7 @@ img {
     height: 40px;
     background: var(--accent-color-text);
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover, .footer-link:focus {
