--- a/css/styles.css
+++ b/css/styles.css
@@ -168,10 +168,13 @@ img {
 
 .hero {
     background-color: var(--second-color-text);
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), 
-    url('../images/people-office.jpg');
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office.jpg');
     text-align: center;
     padding: 188px 0;
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 
@@ -226,12 +229,9 @@ img {
     height: 112px;
     margin-bottom: 8px;
     background: var(--third-accent-color);
+    border-radius: 4px;
 }
 
-.icon-features {
-    width: 64px;
-    height: 64px;
-}
 
 .features-list > .item {
     width: calc((100% - 72px) / 4);
@@ -321,14 +321,12 @@ img {
 }
 
 .our-team-card {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 32px 0;
 }
 
 .our-team-networks {
     display: flex;
+    justify-content: center;
     gap: 24px;
 }
 
@@ -348,8 +346,7 @@ img {
 }
 
 .icon-our-team {
-    width: 16px;
-    height: 16px;
+    fill: var(--third-accent-color);
 }
 
 /* Section 4 */
@@ -379,6 +376,7 @@ img {
     border: 1px solid #8E8F99;
     border-radius: 4px;
     color: var(--icon-color);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:hover, .customers-link:focus {
