--- a/css/styles.css
+++ b/css/styles.css
@@ -510,13 +510,13 @@ img {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.examples-cover-text:hover {
+/* .examples-cover-text:hover {
     transform: translateY(0%);
 }
 
 .examples-cover-text:focus {
     transform: translateY(0%);
-}
+} */
 
 
 /* =================================== FOOTER =========================================*/
